# QtNativeWebView

./: CMakeLists.txt
cmake/: FindWebView2.cmake
examples/: CMakeLists.txt
examples/minibrowser/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  minibrowser_zh_CN.ts
include/: QNativeWebSettings  QNativeWebView  QNativeWebView_global.h  qdarwinwebview.h  qlinuxwebview.h  qnativewebsettings.h  qnativewebview.h  qnativewebview_p.h  qwebview2webview.h
include/private/: qdarwinwebview.h  qlinuxwebview.h  qnativewebview_p.h  qwebview2webview.h
src/: QNativeWebView_zh_CN.ts  qdarwinwebview.mm  qlinuxwebview.cpp  qnativewebview.cpp  qwebview2webview.cpp
